@@ -20,6 +20,7 @@
     <File name="./SqliteDbFactory.cs" subtype="Code" buildaction="Compile" />
     <File name="./Schema" subtype="Directory" buildaction="Compile" />
     <File name="./SqlitePooledDbConnection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./SqliteDialect.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
